--- a/Chalkable.Web/assets/jade/activities/reports/MissingAssignmentsReport.jade
+++ b/Chalkable.Web/assets/jade/activities/reports/MissingAssignmentsReport.jade
@@ -1,14 +1,63 @@
 .dialog-window.report-window
    .close.close-btn.dark
-      h1=Msg.Create_Report
-      .report-buttons.panel-bg
-         +ActionLinkList(self.buildReportLinksData('missingAssignmentsReport'))
-      +ActionForm('grading', 'submitMissingAssignmentsReport').missing-assignments-report-form.no-working
-         +Hidden('gradingPeriodId', self.getGradingPeriodId().valueOf())
-         +Hidden('classId', self.getClassId().valueOf())
-         +Hidden('alternateScoreIds', '')#alternate-scores
-         .report-content no data now
-         .report-bottom
-            +ReportFormatSelect()
-            BUTTON(type="submit").chlk-button.blue-gradient-btn=Msg.Download
-            BUTTON(type="button").close.chlk-button.grey-button=Msg.Cancel
+   h1=Msg.Create_Report
+   .report-buttons.panel-bg
+      +ActionLinkList(self.buildReportLinksData('missingAssignmentsReport'))
+   +ActionForm('grading', 'submitMissingAssignmentsReport').missing-assignments-report-form.no-working
+      +Hidden('gradingPeriodId', self.getGradingPeriodId().valueOf())
+      +Hidden('classId', self.getClassId().valueOf())
+      +Hidden('alternateScoreIds', '')#alternate-scores
+      .report-content
+         TABLE.report-table
+            TR
+               TD.item-3
+                  h3=Msg.Start_date
+                  +DatePicker('startDate', self.getStartDate() || date)(
+                     data-options={
+                        showOtherMonths: true,
+                        selectOtherMonths: true,
+                        calendarCls: 'for-dialog',
+                        minDate: self.getStartDate().getDate(),
+                        maxDate: self.getEndDate().getDate()
+                     },
+                     class="validate[required]"
+                  ).report-date-picker
+               TD.item-3
+                  h3=Msg.End_date
+                  +DatePicker('endDate', self.getEndDate() || date)(
+                     data-options={
+                        showOtherMonths: true,
+                        selectOtherMonths: true,
+                        calendarCls: 'for-dialog',
+                        minDate: self.getStartDate().getDate(),
+                        maxDate: self.getEndDate().getDate()
+                     },
+                     class="validate[required]"
+                  ).report-date-picker
+               TD.item-3
+            TR
+               TD.item-3
+                  +OrderBySelect(true)
+               TD.item-3
+                  +IdToPriintSelect(true)
+               TD.item-3
+                  h3=Msg.Alternate_Scores
+                  +Select('alternateScore')(multiple).alternate-scores-select
+                     each scores in self.getAlternateScores()
+                        +Option(scores.getId().valueOf(), scores.getName(), true)
+            TR
+               TD.item-3
+                  h3=Msg.Include
+                  +LabeledCheckbox(Msg.Alternate_Scores_Only, 'alternateScoresOnly', false)
+                  +LabeledCheckbox(Msg.Withdrawn_students, 'includeWithdrawnStudents', false)
+               TD.item-3
+                  h3=Msg.Options
+                  +LabeledCheckbox(Msg.Count_Zeros_as_Missing, 'considerZerosAsMissingGrades', false)
+                  +LabeledCheckbox(Msg.One_Per_Page, 'onePerPage', false)
+                  +LabeledCheckbox(Msg.Suppress_student_name, 'suppressStudentName', false)
+               TD.item-3
+                  h3=Msg.Format
+                  +ReportFormatSelect()
+      .report-bottom
+         BUTTON(type="submit").chlk-button.blue-gradient-btn=Msg.Download
+         BUTTON(type="button").close.chlk-button.grey-button=Msg.Cancel
