--- a/Chalkable.Web/assets/jade/activities/reports/ProgressReport.jade
+++ b/Chalkable.Web/assets/jade/activities/reports/ProgressReport.jade
@@ -16,13 +16,7 @@
             TABLE.report-table
                 TR
                     TD.item-3
-                        h3=Msg.ID_to_print
-                        +Select('idToPrint').id-to-print
-                            +Option(1, Msg.Student_Number, true)
-                            +Option(2, Msg.State_ID_number, false)
-                            +Option(3, Msg.Alt_student_number, false)
-                            +Option(4, Msg.SS_number, false)
-                            +Option(0, Msg.None, false)
+                        +IdToPriintSelect(true)
                     TD.item-3
                         h3=Msg.Absence_reasons
                         +Select('absenceReason')(multiple).reasons-select
