--- a/Chalkable.Web/assets/jade/activities/reports/ReportBase.jade
+++ b/Chalkable.Web/assets/jade/activities/reports/ReportBase.jade
@@ -6,3 +6,21 @@ mixin ReportFormatSelect()
       +Option(3, "HTML", false)(disabled)
       +Option(4, "TIFF", false)(disabled)
       +Option(5, "XML (" + Msg.With_report_data + ")", false)(disabled)
+
+mixin IdToPriintSelect(withHeader)
+   if withHeader
+      h3=Msg.ID_to_print
+   +Select('idToPrint').id-to-print
+      +Option(1, Msg.Student_Number, true)
+      +Option(2, Msg.State_ID_number, false)
+      +Option(3, Msg.Alt_student_number, false)
+      +Option(4, Msg.SS_number, false)
+      +Option(0, Msg.None, false)
+
+mixin OrderBySelect(withHeader)
+   if withHeader
+      h3=Msg.Order_by
+   +Select('orderBy').order-by
+      +Option(1, Msg.Student_ID, true)
+      +Option(2, Msg.Section_average, false)
+      +Option(0, Msg.Student_display_name, false)
