--- a/Chalkable.Web/assets/jade/activities/reports/WorksheetReport.jade
+++ b/Chalkable.Web/assets/jade/activities/reports/WorksheetReport.jade
@@ -34,13 +34,7 @@
                         class="validate[required]"
                     ).report-date-picker
                 TD.item-3
-                    h3=Msg.ID_to_print
-                    +Select('idToPrint').id-to-print
-                        +Option(1, Msg.Student_Number, true)
-                        +Option(2, Msg.State_ID_number, false)
-                        +Option(3, Msg.Alt_student_number, false)
-                        +Option(4, Msg.SS_number, false)
-                        +Option(0, Msg.None, false)
+                    +IdToPriintSelect(true)
             TR
                 TD(colspan="3").item-1
                     .grid-container
