fixed for CHLK-3387 Teacher: Attendance> All :: Alert when no attendance was taken CHLK-3476 Teacher. Attendance > All. Alert is missing when no attendance was taken

--- a/Chalkable.Web/assets/jade/activities/attendance/SummaryPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/SummaryPage.jade
@@ -48,7 +48,7 @@ mixin AbsentLatePage(data, header)
 .attendance-summary
     topData = self.getTopData();
     topItems = topData.getTopItems();
-    +LeftRightToolbar(topItems, chlk.templates.classes.TopBar, 'attendance', 'classList')(
+    +LeftRightToolbar(topItems, chlk.templates.attendance.TopBar, 'attendance', 'classList')(
         selectedItemId="",
         disabledClass = 'x-hidden'
     ).classes-bar
