--- a/Chalkable.Web/assets/sass/partials/main/_attendance.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_attendance.scss
@@ -1,6 +1,6 @@
 $blue-color: #2f7790;
 
-.class-list-page{
+.class-list-page, .attendance-summary{
   .class-button{
     overflow: visible !important;
 
