--- a/Chalkable.Web/assets/jade/activities/reports/GradeBookReport.jade
+++ b/Chalkable.Web/assets/jade/activities/reports/GradeBookReport.jade
@@ -1,11 +1,15 @@
+mixin ReportTypeSelect()
+    h3=Msg.Report_type
+    +Select('reportType').report-type
+        +Option(0, Msg.Summary, true)
+        +Option(1, Msg.Detail, false)
+
 .dialog-window.report-window
     .close.close-btn.dark
     date = new chlk.models.common.ChlkDate()
     h1=Msg.Create_Report
     .report-buttons.panel-bg
-        a(href="javascript:").report-button.pressed=Msg.Grade_Book_Report
-        +ActionLink('grading', 'worksheetReport', self.getGradingPeriodId(), self.getClassId(), self.getStartDate().toStandardFormat(), self.getEndDate().toStandardFormat()).report-button=Msg.Worksheet_Report
-        +ActionLink('grading', 'progressReport', self.getGradingPeriodId(), self.getClassId(), self.getStartDate().toStandardFormat(), self.getEndDate().toStandardFormat()).report-button=Msg.Progress_Report
+        +ActionLinkList(self.buildReportLinksData('gradeBookReport'))
     +ActionForm('grading', 'submitGradeBookReport')
         +Hidden('gradingPeriodId', self.getGradingPeriodId().valueOf())
         +Hidden('classId', self.getClassId().valueOf())
@@ -38,24 +42,11 @@
                 TD.item-3
             TR
                 TD.item-3
-                    h3=Msg.Report_type
-                    +Select('reportType').report-type
-                        +Option(0, Msg.Summary, true)
-                        +Option(1, Msg.Detail, false)
+                    +ReportTypeSelect()
                 TD.item-3
-                    h3=Msg.Order_by
-                    +Select('orderBy').order-by
-                        +Option(1, Msg.Student_ID, true)
-                        +Option(2, Msg.Section_average, false)
-                        +Option(0, Msg.Student_display_name, false)
+                    +OrderBySelect(true)
                 TD.item-3
-                    h3=Msg.ID_to_print
-                    +Select('idToPrint').id-to-print
-                        +Option(1, Msg.Student_Number, true)
-                        +Option(2, Msg.State_ID_number, false)
-                        +Option(3, Msg.Alt_student_number, false)
-                        +Option(4, Msg.SS_number, false)
-                        +Option(0, Msg.None, false)
+                    +IdToPriintSelect(true)
             TR
                 TD.item-3
                     h3=Msg.Option(true)
@@ -69,13 +60,7 @@
                     +LabeledCheckbox(Msg.Non_graded_activities, 'includeNonGradedActivities', false)
                 TD.item-3
                     h3=Msg.Format
-                    +Select('format').format
-                        +Option(0, "PDF", true)
-                        +Option(1, "CSV", false)(disabled)
-                        +Option(2, "Excel", false)(disabled)
-                        +Option(3, "HTML", false)(disabled)
-                        +Option(4, "TIFF", false)(disabled)
-                        +Option(5, "XML (" + Msg.With_report_data + ")", false)(disabled)
+                    +ReportFormatSelect()
         .report-bottom
             BUTTON(type="submit").chlk-button.blue-gradient-btn=Msg.Download
             BUTTON(type="button").close.chlk-button.grey-button=Msg.Cancel
