--- a/Chalkable.Web/assets/sass2/4_pages/_class-list-page.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_class-list-page.sass
@@ -1,3 +1,15 @@
+.classes-bar.attendance
+  .class-button
+    overflow: visible
+
+  .alerts-icon
+    right: -9px
+    display: none
+
+  .first-container
+    margin-top: -20px
+    padding-top: 20px
+
 .class-list-page
 
   .table
