added arrows for new item form

--- a/Chalkable.Web/assets/sass2/4_pages/_announcement-form-page.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_announcement-form-page.sass
@@ -155,3 +155,19 @@
       top: -7px
       left: 30%
       margin-left: -7px
+
+.choose-class
+  width: 210px
+  height: 40px
+  background: image_url('images/announcement/choose-class.png')
+
+.choose-type
+  top: 132px
+  width: 205px
+  height: 45px
+  background: image_url('images/announcement/choose-type.png')
+
+.choose-type, .choose-class
+  position: absolute
+  left: 271px
+  display: block
