--- a/Chalkable.Web/assets/jade/activities/developer/api-explorer.jade
+++ b/Chalkable.Web/assets/jade/activities/developer/api-explorer.jade
@@ -2,23 +2,19 @@ mixin ApiCallForm(controllerInfo, role)
     methods = controllerInfo.getMethods() || []
     if methods.length > 0
         .controller
-            .controller-header
-                .name=controllerInfo.getName()
-                .fill
-                    div
-                .collapse-all
+            .right: span.collapse-all Collapse all
+            .controller-header= '/' + controllerInfo.getName()
             .content
-
                 each cntMethod in methods
-                    .method
+                    .method.chlk-calendar
                         methodType = cntMethod.getMethodType().toLowerCase()
                         .header(class=methodType)
                             span.header-line
                             .header-body
-                                .call-type(class=methodType)
+                                .call-type(class=methodType)= methodType
                                 .action(data-method-name=controllerInfo.getName() + "/" + cntMethod.getName())="/" + controllerInfo.getName() + "/" + cntMethod.getName() + ".json"
-                                .toggle
-                                .description=cntMethod.getDescription()
+                                .description= '- ' +cntMethod.getDescription()
+                            .collapse
                         .details
                             .det-content
                                 methodParams = cntMethod.getParams() || []
@@ -51,15 +47,9 @@ mixin ApiCallForm(controllerInfo, role)
                                         tabContentId = "tab-" + apiFormId
                                         .text-title Code Examples
                                         .tab-headers(tabId=tabContentId)
-                                            .tab-header.active(data-example-type="0")
-                                                span.triangle
-                                                |cUrl
-                                            .tab-header(data-example-type="1")
-                                                span.triangle
-                                                |ruby
-                                            .tab-header(data-example-type="2")
-                                                span.triangle
-                                                |python
+                                            .tab-header.active(data-example-type="0") cUrl
+                                            .tab-header(data-example-type="1") ruby
+                                            .tab-header(data-example-type="2") python
                                         .tab-content(formId = apiFormId, id="tab-" + apiFormId)
                                             pre.prettyprint.lang-python
 
@@ -69,59 +59,64 @@ mixin ApiCallForm(controllerInfo, role)
 apiInfo = self.getApiInfo()
 
 .api-explorer
-    .action-bar.not-transparent
-        .container.panel-bg.buttons-toolbar
-            label API key:
-            input(type="text", name="app-secret-key", value=self.getAppSecretKey()).api-key
+    h2.page-title API Explorer
 
+    //.api-key
+        = 'API key: '
+    //+TextBox("app-secret-key", self.getAppSecretKey())
+
+    .action-bar
+        .items
             each apiRole in self.getApiRoles()
-                +ActionLink('developer', 'api', apiRole).toolbar-btn(class = apiInfo.getRole() == apiRole ? "selected" : undefined)=apiRole
-    h4.text-title Chalkable REST API
-    .api-description
-        The API allows you to access real-time data from schools. All methods return JSON. There are user roles on the bar above.
-        Choosing a role, for example teacher, displays all of the methods available to your app if a teacher had installed it.
-    h4.text-title  OAuth
-    .api-description
-        OAuth 2.0 is used for authentication. The authentication token you receive, after making your request, includes a user role.
-        The user role defines the level of access.
-    h4.text-title Authentication
-    .api-description Code example for getting access token
-    .api-description.white
-        pre.prettyprint.lang-ruby.auto-overflow
-            | require 'rest-client'
-            |     def get_access_token()
-            |       begin
-            |         @response = RestClient.post(
-            |             'https://chalkable-access-control.accesscontrol.windows.net/v2/OAuth2-13',
-            |             'client_id' => '{your app url}',
-            |             'client_secret' => '{your app client secret, can be found on app info page for developer}',
-            |             'scope' => 'https://chalkable.com/',
-            |             'redirect_uri' => '{your app url}',
-            |             'grant_type' => 'authorization_code',
-            |             'code' => '{added to your app url as param}'
-            |         )
-            |         return JSON.parse(@response)
-            |       rescue Exception => e
-            |           puts "============================="
-            |           puts e.message
-            |           puts "============================="
-            |           puts e.inspect
-            |           puts "============================="
-            |       end
-            | end
-    .api-description Sample parsed json response
-    .api-description.white
-        pre.prettyprint.lang-ruby.auto-overflow
-            | {"token_type"=>"http://schemas.xmlsoap.org/ws/2009/11/swt-token-profile-1.0",
-            | "access_token"=>"http%3a%2f%2fschemas.xmlsoap.org%2fws%2f2005%2f05%2fidentity%2fclaims%2fnameidentifier=user1234%40chalkable.com%0d%0a12&http%3a%2f%2fschemas.microsoft.com%2faccesscontrolservice%2f2010%2f07%2fclaims%2fpermissions=https%3A%2F%2Fchalkable.com%2f&http%3a%2f%2fschemas.xmlsoap.org%2fws%2f2009%2f09%2fidentity%2fclaims%2factor=http%3a%2f%2f127.0.0.1%3a3000%2fhome%2findex&http%3a%2f%2fschemas.microsoft.com%2faccesscontrolservice%2f2010%2f07%2fclaims%2fidentityprovider=https%3a%2f%2fchalkable-access-control.accesscontrol.windows.net%2f&Audience=https%3A%2F%2Fchalkable.com%2f&ExpiresOn=1405440742&Issuer=https%3a%2f%2fchalkable-access-control.accesscontrol.windows.net%2f&HMACSHA256=UvGUSTZZ%2b4Zlw8Me9CC8bi62dc0ItNuPGfEK60dQyJM%3d",
-            | "expires_in"=>"12345",
-            | "refresh_token"=>"bLs4ldzKYm7hApxSpOEOSg==",
-            | "scope"=>"https://chalkable.com/"}
-    div#api-search-field
-            +SearchBox(chlk.services.ApiService, "getList", chlk.templates.developer.ApiListTpl, apiInfo.getRole())#api-search-box(name="apiSearchbox",
-            triggerBtnId="api-search-btn", categorized="true", groupingField="category", listCls="apiDropdownList")
-            div.search-btn#api-search-btn
-    .api-calls-seq.call-tree
+                +ActionLink('developer', 'api', apiRole).item(class = apiInfo.getRole() == apiRole ? "pressed" : undefined)= apiRole.capitalize()
+
+
+    +CloseOpen('Chalkable REST API')
+        .api-description
+            The API allows you to access real-time data from schools. All methods return JSON. There are user roles on the bar above.
+            Choosing a role, for example teacher, displays all of the methods available to your app if a teacher had installed it.
+    +CloseOpen('OAuth')
+        .api-description
+            OAuth 2.0 is used for authentication. The authentication token you receive, after making your request, includes a user role.
+            The user role defines the level of access.
+    +CloseOpen('Authentication')
+        .api-description Code example for getting access token
+        .api-description.white
+            pre.prettyprint.lang-ruby.auto-overflow
+                | require 'rest-client'
+                |     def get_access_token()
+                |       begin
+                |         @response = RestClient.post(
+                |             'https://chalkable-access-control.accesscontrol.windows.net/v2/OAuth2-13',
+                |             'client_id' => '{your app url}',
+                |             'client_secret' => '{your app client secret, can be found on app info page for developer}',
+                |             'scope' => 'https://chalkable.com/',
+                |             'redirect_uri' => '{your app url}',
+                |             'grant_type' => 'authorization_code',
+                |             'code' => '{added to your app url as param}'
+                |         )
+                |         return JSON.parse(@response)
+                |       rescue Exception => e
+                |           puts "============================="
+                |           puts e.message
+                |           puts "============================="
+                |           puts e.inspect
+                |           puts "============================="
+                |       end
+                | end
+        .api-description Sample parsed json response
+        .api-description.white
+            pre.prettyprint.lang-ruby.auto-overflow
+                | {"token_type"=>"http://schemas.xmlsoap.org/ws/2009/11/swt-token-profile-1.0",
+                | "access_token"=>"http%3a%2f%2fschemas.xmlsoap.org%2fws%2f2005%2f05%2fidentity%2fclaims%2fnameidentifier=user1234%40chalkable.com%0d%0a12&http%3a%2f%2fschemas.microsoft.com%2faccesscontrolservice%2f2010%2f07%2fclaims%2fpermissions=https%3A%2F%2Fchalkable.com%2f&http%3a%2f%2fschemas.xmlsoap.org%2fws%2f2009%2f09%2fidentity%2fclaims%2factor=http%3a%2f%2f127.0.0.1%3a3000%2fhome%2findex&http%3a%2f%2fschemas.microsoft.com%2faccesscontrolservice%2f2010%2f07%2fclaims%2fidentityprovider=https%3a%2f%2fchalkable-access-control.accesscontrol.windows.net%2f&Audience=https%3A%2F%2Fchalkable.com%2f&ExpiresOn=1405440742&Issuer=https%3a%2f%2fchalkable-access-control.accesscontrol.windows.net%2f&HMACSHA256=UvGUSTZZ%2b4Zlw8Me9CC8bi62dc0ItNuPGfEK60dQyJM%3d",
+                | "expires_in"=>"12345",
+                | "refresh_token"=>"bLs4ldzKYm7hApxSpOEOSg==",
+                | "scope"=>"https://chalkable.com/"}
+    //div#api-search-field
+        +SearchBox(chlk.services.ApiService, "getList", chlk.templates.developer.ApiListTpl, apiInfo.getRole())#api-search-box(name="apiSearchbox",
+        triggerBtnId="api-search-btn", categorized="true", groupingField="category", listCls="apiDropdownList")
+        div.search-btn#api-search-btn
+    //.api-calls-seq.call-tree
     roleControllers = apiInfo.getControllers() || []
         each contr in roleControllers
             +ApiCallForm(contr, apiInfo.getRole())
