--- a/Chalkable.Web/assets/jade/activities/apps/app-info.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/app-info.jade
@@ -126,11 +126,16 @@ appPermissions = appPermissions.join(',')
 appPlatforms = appPlatforms.join(',')
 
 .app-info
+    h2.page-title APP info
+
+    .api-key
+        = 'API key: '
+        +Textbox("apikey", app.getSecretKey())
+
+
     if !self.isReadOnly()
         .action-bar.not-transparent.dev-app-info
             .container.panel-bg
-                label API key:
-                +Textbox("apikey", app.getSecretKey()).api-key
                 label= "Status: " + app.getState().toString()
     +ActionForm('apps', 'toggleBanner')#toggle-banner-form
         +Hidden('bannerEnabled', myAppsAccess.isAttachEnabled())
