--- a/Chalkable.Web/assets/jade/common/footers/developer-footer.jade
+++ b/Chalkable.Web/assets/jade/common/footers/developer-footer.jade
@@ -1,27 +1,13 @@
 mixin DemoRoleButton(name, title, notReady)
-    a.demo-role-button(rolename=name)(attributes)
-
-        span #{title ? title : name}
-            if notReady
-                span
-            .mark.left
-            .mark.right
-
-
+    BUTTON.demo-role-button(data-rolename=name)(attributes)= title ? title : name
 
 -apps = self.getDeveloperApps()
 -currentAppId = self.getCurrentAppId()
 
-#dev-apps
-    +AppsList('dev-apps-list', apps, currentAppId)#dev-apps-list
-.border.demo-end.hidden
-.demo-end.hidden
-    h3 Demo
-    #demo-end-container
-.border
++AppsList('dev-apps-list', apps, currentAppId)#dev-apps-list.left
 #roles-buttons
-    +DemoRoleButton('Student')
     +DemoRoleButton('Teacher')
+    +DemoRoleButton('Student')
     +DemoRoleButton('Admin', null, true).coming
     +DemoRoleButton('Parent', null, true).coming
     +DemoRoleButton('District', null, true).coming
