--- a/Chalkable.Web/assets/jade/common/header.jade
+++ b/Chalkable.Web/assets/jade/common/header.jade
@@ -1,9 +1,10 @@
-.wrapper
-    +SearchBox(chlk.services.SearchService, "search", chlk.templates.search.SiteSearch)#siteSearch(
-        name="siteSearch"
-        clearAfterSelect = true
-        withButton = true)
-    label(for="siteSearch")#search-glass
+if chlk.templates.search && chlk.templates.search.SiteSearch
+    .wrapper
+        +SearchBox(chlk.services.SearchService, "search", chlk.templates.search.SiteSearch)#siteSearch(
+            name="siteSearch"
+            clearAfterSelect = true
+            withButton = true)
+        label(for="siteSearch")#search-glass
 
 +ActionButton('notification', 'list-new').blue.notifications-link &nbsp;
 
