--- a/Chalkable.Web/assets/jade/activities/reports/ComprehensiveProgressReport.jade
+++ b/Chalkable.Web/assets/jade/activities/reports/ComprehensiveProgressReport.jade
@@ -1,5 +1,6 @@
 .dialog-window.report-window
    .close.close-btn.dark
+   date = new chlk.models.common.ChlkDate()
    h1=Msg.Create_Report
    .report-buttons.panel-bg
       +ActionLinkList(self.buildReportLinksData('comprehensiveProgressReport'))
@@ -9,7 +10,79 @@
       +Hidden('absenceReasonIds', '')#absence-reasons
       +Hidden('gradingPeriodIds', '')#grading-periods
       +Hidden('dailyAttendanceDisplayMethod', 0)#daily-attendance-display-method
-      .report-content no data now
+      .report-content
+         TABLE.report-table
+            TR
+               TD.item-3
+                  h3=Msg.Start_date
+                  +DatePicker('startDate', self.getStartDate() || date)(
+                  data-options={
+                        showOtherMonths: true,
+                        selectOtherMonths: true,
+                        calendarCls: 'for-dialog',
+                        minDate: self.getStartDate().getDate(),
+                        maxDate: self.getEndDate().getDate()
+                     },
+                     class="validate[required]"
+                  ).report-date-picker
+               TD.item-3
+                  h3=Msg.End_date
+                  +DatePicker('endDate', self.getEndDate() || date)(
+                  data-options={
+                        showOtherMonths: true,
+                        selectOtherMonths: true,
+                        calendarCls: 'for-dialog',
+                        minDate: self.getStartDate().getDate(),
+                        maxDate: self.getEndDate().getDate()
+                     },
+                     class="validate[required]"
+                  ).report-date-picker
+               TD.item-3
+                  h3=Msg.Grading_Periods
+                  +Select('gradingPeriod')(multiple).grading-periods-select
+                     each gradingPeriod in self.getGradingPeriods()
+                        +Option(gradingPeriod.getId().valueOf(), gradingPeriod.getDescription(), gradingPeriod.getId() == self.getGradingPeriodId())
+            TR
+               TD.item-3
+                  +OrderBySelect(true)
+               TD.item-3
+                  +IdToPriintSelect(true)
+               TD.item-3
+                  h3=Msg.Absence_reasons
+                  +Select('absenceReason')(multiple).reasons-select
+                     each reason in self.getReasons()
+                        +Option(reason.getId().valueOf(), reason.getName(), true)
+            TR
+               TD.item-3
+                  h3=Msg.Include
+                  +LabeledCheckbox(Msg.Class_average, 'displayClassAverages', false)
+                  +LabeledCheckbox(Msg.Class_Average_Only, 'classAverageOnly', false)
+                  +LabeledCheckbox(Msg.Category_averages, 'displayCategoryAverages', false)
+                  +LabeledCheckbox(Msg.Period_attendance, 'displayPeriodAttendance', false)
+                  +LabeledCheckbox(Msg.Total_points, 'displayTotalPoints', false)
+                  +LabeledCheckbox(Msg.Signal_line, 'displaySignatureLine', false)
+               TD.item-3
+                  h3
+                  +LabeledCheckbox(Msg.Additional_mailings, 'additionalMailings', false)
+                  +LabeledCheckbox(Msg.Student_comment, 'displayStudentComments', false)
+                  +LabeledCheckbox(Msg.Student_mailing_address, 'displayStudentMailingAddress', false)
+                  +LabeledCheckbox(Msg.Student_Photo, 'includePicture', false)
+                  +LabeledCheckbox(Msg.Withdrawn_students, 'includeWithdrawnStudents', false)
+            TR
+               TD.item-3
+                  h3=Msg.Include_students
+                  .min-max
+                     input(placeholder=Msg.Min_avg, name="minStandardAverage").min-max-input.min
+                     | -
+                     input(placeholder=Msg.Max_avg, name="maxStandardAverage").min-max-input.max
+               TD.item-3
+                  h3=Msg.Daily_attendance
+                  +LabeledCheckbox(Msg.Year_to_date, 'yearToDate', false)#year-to-date-chk
+                  +LabeledCheckbox(Msg.Grading_period, 'gradingPeriod', false)#grading-period-chk
+               TD.item-3
+                  h3=Msg.Other
+                  +LabeledCheckbox(Msg.Go_green, 'goGreen', false)
+                  +LabeledCheckbox(Msg.Window_Envelope, 'windowEnvelope', false)
       .report-bottom
          +ReportFormatSelect()
          BUTTON(type="submit").chlk-button.blue-gradient-btn=Msg.Download
