--- a/Chalkable.Web/assets/jade/activities/profile/profile-info-blocks.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/profile-info-blocks.jade
@@ -2,19 +2,18 @@ mixin ProfileInfoView(model)
     address = model.getAddress() || null;
     primaryPhone = model.getPrimaryPhone() ? model.getPrimaryPhone().getValue() : '';
     homePhone = model.getHomePhone() ? model.getHomePhone().getValue() : '';
-    .info-view
-        //#top-panel
+    .info-view.summary-view
+        #top-summary-panel
             #avatar-photo-conainer.left-block.panel-block
                 .img-container
                     +PersonImg(model, 140, true)
-            #info-panel.central-block.panel-block
+                    .grades-container
+            #student-info-panel.right-block.panel-block
                 displayName =model.getDisplayName() || model.getFullName()
                 h1.display-name(data-tooltip=displayName, data-tooltip-type="overflow")=displayName
-                if model.getGradeLevel && model.getGradeLevel() && model.getGradeLevel().getName()
-                    .status= 'Grade: ' + model.getGradeLevel().getName()
 
         .sections
-            +CloseOpen(model.getRole().getName() + 'info').today-work-panel
+            +CloseOpen(model.getRole().getName() + ' info').today-work-panel
                 .sections-info
                     if model.getEmail()
                         .section-data
@@ -51,67 +50,50 @@ mixin ProfileInfoForm(controller, model)
     primaryPhone = model.getPrimaryPhone()
     primaryPhoneValue = model.getPrimaryPhone() ? model.getPrimaryPhone().getValue() : '';
     homePhone = model.getHomePhone() ? model.getHomePhone().getValue() : '';
-    .info-edit
+    .info-edit.summary-view
+        #top-summary-panel
+            #avatar-photo-conainer.left-block.panel-block
+                .img-container
+                    +PersonImg(model, 140, true)
+                    .grades-container
+            #student-info-panel.right-block.panel-block
+                displayName =model.getDisplayName() || model.getFullName()
+                h1.display-name(data-tooltip=displayName, data-tooltip-type="overflow")=displayName
+
         +ActionForm(controller, 'infoEdit')#info-edit-form.with-ok
-            #top-panel
-                #avatar-photo-conainer.left-block.panel-block
-                    .img-container
-                        +PersonImg(model, 140, true)
-            .name-block
-                input(name="firstname", value=model.getFirstName(), readonly)
-                input(name="lastname", value=model.getLastName(), readonly)
-                input(type="hidden", name="id", value=model.getId())
-                input(type="hidden", name="salutation", value=model.getSalutation())
+            input(type="hidden", name="firstname", value=model.getFirstName(), readonly)
+            input(type="hidden", name="lastname", value=model.getLastName(), readonly)
+            input(type="hidden", name="id", value=model.getId())
+            input(type="hidden", name="salutation", value=model.getSalutation())
             .sections
-                .sections-info
-                    .section-title=model.getRole().getName()
-                    div
-                        .section-data
-                            .info-title=Msg.Email
-                            input(name="email", value=model.getEmail(), class="validate[custom[email], required]")
-                        .section-data
-                            .info-title=Msg.Cell
-                            input(
-                            data-type=2,
-                            data-isPrimary=true,
-                            value=primaryPhoneValue,
-                            class="primary-phone"
-                            readonly
-                            )
-                            input(name="phonesValue", value=model.getPhonesValue(), type="hidden")
-                            +Select('cellService')(data-placeholder="*Cell Service*", value="")#cellService.grey-combo
-                                option AT&T
-                                option Verizon
-                                option Sprint
-                                option T-mobile
-                                option Boost Mobile
-                                option Other
-                        .section-data
-                            .info-title=Msg.Birthday
-                            .data-info.low-font-size=model.getBirthDateText()
-                        .section-data.gender-box
-                            div(class=model.getGender() ? model.getGender().toLowerCase() : '').gender-img-box
-                            p=model.getGenderFullText()
-                .sections-info
-                    .section-title=Msg.Home
-                    div
-                        .section-data
-                            .info-title=Msg.Home_Phone
-                            input(
-                            value=homePhone,
-                            class="home-phone",
-                            data-type=0,
-                            data-isPrimary=false,
-                            readonly
-                            )
-                        .section-data
-                            .info-title=Msg.Home_Address
-                            input(name="addressesValue", value=model.getAddressesValue(), type="hidden")
-                            .adresses
-                                addressesModel = new chlk.models.people.Addresses()
-                            -addressesModel.setItems([address]);
-                            +RenderWith(addressesModel, chlk.templates.people.Addresses)
+                +CloseOpen(model.getRole().getName() + ' info').today-work-panel
+                    .sections-info
+                        if model.getEmail()
+                            .section-data
+                                .info-title=Msg.Email
+                                input(name="email", value=model.getEmail(), class="validate[custom[email], required]").data-info
+                        if primaryPhone
+                            .section-data
+                                .info-title=Msg.Cell
+                                .data-info=primaryPhone
+                        if model.getBirthDateText()
+                            .section-data
+                                .info-title=Msg.Birthday
+                                .data-info=model.getBirthDateText()
+
+                if homePhone || address
+                    +CloseOpen(Msg.Home_info).today-work-panel
+                        .sections-info
+                            if homePhone
+                                .section-data
+                                    .info-title=Msg.Home_Phone
+                                    .data-info=homePhone
+                            if address
+                                .section-data
+                                    .info-title=Msg.Address
+                                    .data-info=address.getValue()
                 block
+
             .section-buttons
                 if model.isAbleEdit()
                     +Button()(type="submit").special-button.blue-button#submit-info-button=Msg.Save
