--- a/Chalkable.Web/assets/sass2/_shared.sass
+++ b/Chalkable.Web/assets/sass2/_shared.sass
@@ -25,6 +25,7 @@
 @import "2_atoms/tooltip"
 @import "2_atoms/checkbox"
 @import "2_atoms/form"
+@import "2_atoms/attachments-and-applications"
 
 @import "3_molecules/layout"
 @import "3_molecules/header"
