--- a/Chalkable.Web/assets/sass2/3_molecules/_grid.sass
+++ b/Chalkable.Web/assets/sass2/3_molecules/_grid.sass
@@ -31,3 +31,27 @@
 
   .body .row:nth-child(2n)
     background-color: #eee
+    
+  .action-links A
+    display: inline-block
+    width: 16px
+    height: 16px
+    vertical-align: middle
+
+    &.profile
+      background: url(images/controls/grid/report.png) 0 0 no-repeat
+
+    &.view
+      background: url(images/controls/grid/information.png) 0 0 no-repeat
+
+    &.remove
+      background: url(images/controls/grid/delete.gif) 0 0 no-repeat
+
+    &.persons
+      background: url(images/controls/grid/user.png) 0 0 no-repeat
+
+    &.plugin
+      background: url(images/controls/grid/plugin.gif) 0 0 no-repeat
+    
+  
+  
