--- a/Chalkable.Web/assets/sass2/4_pages/_district-list-page.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_district-list-page.sass
@@ -4,12 +4,15 @@
     top: 20px
     right: 50px
 
-  .body:nth-child(2n+1)
-    background-color: #eee
+  .body
+    &:nth-child(2n+1)
+      background-color: #eee
 
-    .row:first-child .td
-      padding-top: 5px
+    .row:first-child
+      font-weight: 600
 
-  .body .row:nth-child(2n)
-    background-color: transparent
+      .td
+        padding-top: 5px
 
+    .row:nth-child(2n)
+      background-color: transparent
