--- a/Chalkable.Web/assets/sass2/4_pages/_seating-chart-page.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_seating-chart-page.sass
@@ -74,7 +74,10 @@
       height: 64px
       width: 64px
       border-radius: 50%
-      border: 3px dashed silver
+      border: 3px dashed transparent
+
+  .ui-droppable .empty-box .empty
+    border-color: silver
 
   .student-block
     margin: 25px 10px
