--- a/Chalkable.Web/assets/jade/activities/profile/SchedulingPage.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/SchedulingPage.jade
@@ -1,12 +1,22 @@
-schedule = self.getUser()
-.profile-calendar.scheduling-view
-    .loader-container
-        .loader
+-var schedule = self.getUser()
+-var isStudent = self.getUser().getRole().getName() == 'Student'
+.profile-page.scheduling-view
+    h2.page-title= isStudent ? Msg.Student_profile : Msg.Profile
+    if isStudent
+        +ProfileTopBar(self, 'schedule')
+    else
         +UserProfileTopBar(self, 'schedule')
-        .profile-info.scheduling-view
-            .summary-info
-                +ShortPersonInfoSection(schedule, 64)
-                    label=self.getPersonEnrollmentStatus(self.getUser(), schedule.getClassesNumber())
-        calendarData = self.getProfileScheduleTplParams(self.getUser(), self.getCurrentAction())
-        .calendar-section
-            +Calendar(self, self.bodyTpl, self.calendar, calendarData.controllerName, calendarData.actions, [schedule.getId()])
+
+    #top-panel
+        #avatar-photo-conainer.left-block.panel-block
+            .img-container
+                +PersonImg(schedule, 140, true)
+                .grades-container
+        #student-info-panel.right-block.panel-block
+            displayName =schedule.getDisplayName() || schedule.getFullName()
+            h1.display-name(data-tooltip=displayName, data-tooltip-type="overflow")=displayName
+            .status=self.getPersonEnrollmentStatus(self.getUser(), schedule.getClassesNumber())
+
+    calendarData = self.getProfileScheduleTplParams(self.getUser(), self.getCurrentAction())
+    .calendar-section
+        +Calendar(self, self.bodyTpl, self.calendar, calendarData.controllerName, calendarData.actions, [schedule.getId()])
