--- a/Chalkable.Web/assets/jade/activities/reports/ComprehensiveProgressReport.jade
+++ b/Chalkable.Web/assets/jade/activities/reports/ComprehensiveProgressReport.jade
@@ -9,7 +9,7 @@
       +Hidden('classId', self.getClassId().valueOf())
       +Hidden('absenceReasonIds', '')#absence-reasons
       +Hidden('gradingPeriodIds', '')#grading-periods
-      +Hidden('dailyAttendanceDisplayMethod', 0)#daily-attendance-display-method
+      +Hidden('dailyAttendanceDisplayMethod', chlk.models.reports.AttendanceDisplayMethodEnum.NONE.valueOf())#daily-attendance-display-method
       .report-content
          TABLE.report-table
             TR
@@ -44,7 +44,15 @@
                         +Option(gradingPeriod.getId().valueOf(), gradingPeriod.getDescription(), gradingPeriod.getId() == self.getGradingPeriodId())
             TR
                TD.item-3
-                  +OrderBySelect(true)
+                  h3=Msg.Order_by
+                  +Select('orderBy').order-by
+                     +Option(chlk.models.reports.ComprehensiveProgressOrderByMethod.STUDENT_DISPLAY_NAME.valueOf(), Msg.Student_display_name, true)
+                     +Option(chlk.models.reports.ComprehensiveProgressOrderByMethod.STUDNET_IDENTIFIER.valueOf(), Msg.Student_ID, false)
+                     +Option(chlk.models.reports.ComprehensiveProgressOrderByMethod.GRADE_LEVEL.valueOf(), Msg.Grade_Level, false)
+                     +Option(chlk.models.reports.ComprehensiveProgressOrderByMethod.HOME_ROOM.valueOf(), 'Homeroom', false)
+                     +Option(chlk.models.reports.ComprehensiveProgressOrderByMethod.POSTAL_CODE.valueOf(), 'Postal code', false)
+                     +Option(chlk.models.reports.ComprehensiveProgressOrderByMethod.DISTRIBUTION_PERIOD.valueOf(), 'Distribution Period', false)
+
                TD.item-3
                   +IdToPriintSelect(true)
                TD.item-3
