--- a/Chalkable.Web/assets/jade/activities/reports/ReportBase.jade
+++ b/Chalkable.Web/assets/jade/activities/reports/ReportBase.jade
@@ -1,26 +1,26 @@
 mixin ReportFormatSelect()
    +Select('format').format
-      +Option(0, "PDF", true)
-      +Option(1, "CSV", false)(disabled)
-      +Option(2, "Excel", false)(disabled)
-      +Option(3, "HTML", false)(disabled)
-      +Option(4, "TIFF", false)(disabled)
-      +Option(5, "XML (" + Msg.With_report_data + ")", false)(disabled)
+      +Option(chlk.models.reports.ReportFormatEnum.PDF.valueOf(), "PDF", true)
+      +Option(chlk.models.reports.ReportFormatEnum.CSV.valueOf(), "CSV", false)(disabled)
+      +Option(chlk.models.reports.ReportFormatEnum.EXCEL.valueOf(), "Excel", false)(disabled)
+      +Option(chlk.models.reports.ReportFormatEnum.HTML.valueOf(), "HTML", false)(disabled)
+      +Option(chlk.models.reports.ReportFormatEnum.TIFF.valueOf(), "TIFF", false)(disabled)
+      +Option(chlk.models.reports.ReportFormatEnum.XML.valueOf(), "XML (" + Msg.With_report_data + ")", false)(disabled)
 
 mixin IdToPriintSelect(withHeader)
    if withHeader
       h3=Msg.ID_to_print
    +Select('idToPrint').id-to-print
-      +Option(1, Msg.Student_Number, true)
-      +Option(2, Msg.State_ID_number, false)
-      +Option(3, Msg.Alt_student_number, false)
-      +Option(4, Msg.SS_number, false)
-      +Option(0, Msg.None, false)
+      +Option(chlk.models.reports.StudentIdentifierEnum.STUDENT_NUMBER.valueOf(), Msg.Student_Number, true)
+      +Option(chlk.models.reports.StudentIdentifierEnum.STATE_ID_NUMBER.valueOf(), Msg.State_ID_number, false)
+      +Option(chlk.models.reports.StudentIdentifierEnum.ALT_STUDENT_NUMBER.valueOf(), Msg.Alt_student_number, false)
+      +Option(chlk.models.reports.StudentIdentifierEnum.SOCIAL_SECURITY_NUMBER.valueOf(), Msg.SS_number, false)
+      +Option(chlk.models.reports.StudentIdentifierEnum.NONE.valueOf(), Msg.None, false)
 
 mixin OrderBySelect(withHeader)
    if withHeader
       h3=Msg.Order_by
    +Select('orderBy').order-by
-      +Option(1, Msg.Student_ID, true)
-      +Option(2, Msg.Section_average, false)
-      +Option(0, Msg.Student_display_name, false)
+      +Option(chlk.models.reports.OrderByEnum.STUDENT_ID.valueOf(), Msg.Student_ID, true)
+      +Option(chlk.models.reports.OrderByEnum.STATE_AVERAGE, Msg.Section_average, false)
+      +Option(chlk.models.reports.OrderByEnum.STUDENT_DISPLAY_NAME.valueOf(), Msg.Student_display_name, false)
