--- a/Chalkable.Web/assets/jade/activities/chlkerror/Error404Page.jade
+++ b/Chalkable.Web/assets/jade/activities/chlkerror/Error404Page.jade
@@ -1,5 +1,5 @@
 .error-404-page
+    h1 404 - Page not found
+    .text Ooops, seems there was a problem loading that page
     .error-content
-        h1 OOOPS!
-        p Seems there was a problem loading that page.
-        +ActionLinkButton('feed', 'doToList').special-button2.blue GO TO THE HOMEPAGE
+        h2 Please try another page
