--- a/Chalkable.Web/assets/sass2/3_molecules/_people-list.sass
+++ b/Chalkable.Web/assets/sass2/3_molecules/_people-list.sass
@@ -42,6 +42,10 @@
       z-index: 100
       background-color: #fafafa
 
+    &:not(.selected)
+      .message-button
+        display: none
+
   .avatar-wrapper
     display: inline-block
     vertical-align: middle
