--- a/Chalkable.Web/assets/sass2/4_pages/_grading-grid.sass
+++ b/Chalkable.Web/assets/sass2/4_pages/_grading-grid.sass
@@ -132,6 +132,7 @@
     font: bold 13px/56px 'Open Sans'
     color: #2b2a28
     padding: 0 3px
+    position: relative
 
   .name-container
     .type-name
@@ -354,3 +355,11 @@
   top: 80px
   left: 411px
   position: fixed
+
+.report-link
+  position: absolute
+  width: 27px
+  height: 23px
+  background: image_url('images/icons/printer-icon.png') center center no-repeat
+  right: 10px
+  top: 17px
