--- a/Chalkable.Web/assets/sass2/student.sass
+++ b/Chalkable.Web/assets/sass2/student.sass
@@ -13,3 +13,4 @@
 @import "4_pages/profile-explorer-page"
 @import "4_pages/profile-explorer-page"
 @import "4_pages/setup"
+@import "4_pages/error"
