--- a/Chalkable.Web/assets/sass2/teacher.sass
+++ b/Chalkable.Web/assets/sass2/teacher.sass
@@ -19,6 +19,7 @@
 @import "4_pages/profile-page"
 @import "4_pages/profile-explorer-page"
 @import "4_pages/setup"
+@import "4_pages/error"
 
 @import "5_dialogs/add-standards-dialog"
 @import "5_dialogs/attach-app-dialog"
